<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="50dp"
        android:text="@string/app_title"
        android:textSize="28dp" />

    <TextView
        android:id="@+id/tv_riddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="150dp"
        android:text="@string/tv_riddle"
        android:textSize="18dp" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:text="@string/tv2"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/ed_answer"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/hint" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/www" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="310dp"
            android:text="@string/tv_result"
            android:textColor="@color/black"
            android:textSize="25dp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="500dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_riddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_riddle" />

        <Button
            android:id="@+id/btn_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_answer" />

        <Button
            android:id="@+id/btn_reAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_reAnswer" />

        <Button
            android:id="@+id/btn_showAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_showAnswer" />
    </LinearLayout>


</RelativeLayout>